-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
5.15.16
-
None
-
-
c2fbce200 (tqtc/lts-5.15)
When building for iOS (Qt 5.15.16, Xcode 15.1, iOS 17.2) and linking QtMultimedia,
convertToFormat(QImage::Format_RGB888) gives wrong results: The red and blue components are switched, so it actually converts to BGR instead of RGB.
In the attached minimal example, a red image should be displayed, but it appears blue.
When removing `multimedia` from the `QT +=` line, it's displayed correctly. Note there's no explicit use of QtMultimedia in the example.
I've been told this only happens with Xcode 15 (I cannot test Xcode 14 right now as it doesn't run on macOS Sonoma).
| For Gerrit Dashboard: QTBUG-120647 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 529193,3 | Put private helper classes in unnamed namespace | tqtc/lts-5.15 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |