Put private helper classes in unnamed namespace

Avoids clashes with qtbase's quint24 (qdrawhelper_p.h), which leads to
QImage::convertToFormat() to give wrong results.

Task-number: QTBUG-120647
Change-Id: If4c932e5afea3c8bb1ac2d669221195fa2642e40
Reviewed-by: Doris Verria <doris.verria@qt.io>